<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/primaryColor"
       android:scrollbarStyle="outsideOverlay">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.serbin.kris.myapplication.MainActivity">


        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@color/primaryColor">

            <TableRow android:background="@color/primaryColor">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:paddingTop="10dp"
                    android:text="@string/name"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_column="1"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:inputType="textCapWords"
                    android:textColor="@color/textColorInput"
                    android:textIsSelectable="false"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:background="@color/primaryColor">

                <TextView
                    android:id="@+id/textGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:paddingTop="5dp"
                    android:text="@string/gender"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/radioGender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:checked="true"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/male"
                        android:textColor="@color/textColorInput"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/female"
                        android:textColor="@color/textColorInput"
                        android:textSize="14sp" />
                </RadioGroup>
            </TableRow>

            <TableRow

                android:layout_marginTop="30dp"
                android:background="@color/primaryColor">


                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:paddingTop="15dp"
                    android:text="@string/email"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_column="0"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:inputType="textEmailAddress"
                    android:paddingTop="15dp"
                    android:textColor="@color/textColorInput"
                    android:textIsSelectable="false"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:background="@color/primaryColor">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:paddingTop="15dp"
                    android:text="@string/birthday"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_column="0"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="date"
                    android:textColor="@color/textColorInput"
                    android:textIsSelectable="false"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:background="@color/primaryColor">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:paddingTop="15dp"
                    android:text="@string/weight"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editWeight"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_column="0"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:inputType="numberDecimal"
                    android:textColor="@color/textColorInput"
                    android:textIsSelectable="false"
                    android:textSize="14sp" />
            </TableRow>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/activity"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/radioActivity"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:checked="true"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/low"
                        android:textColor="@color/textColorInput"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radioMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/medium"
                        android:textColor="@color/textColorInput"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radioHigh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/high"
                        android:textColor="@color/textColorInput"
                        android:textSize="14sp" />
                </RadioGroup>
            </LinearLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="hide"
                    android:onClick="hideKeyboard"
                    android:id="@+id/button"
                    android:layout_column="1" />
            </TableRow>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <com.gc.materialdesign.views.ButtonRectangle
                    android:id="@+id/btnSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/textColorPrimary"
                    android:onClick="Save"
                    android:text="@string/save"
                    android:textColor="@color/primaryColor" />


            </LinearLayout>


        </TableLayout>


    </RelativeLayout>
   </ScrollView>
</android.support.v4.widget.DrawerLayout>
