<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:background="@color/primaryColor">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primaryColor"
                android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewFill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/fill_body"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageBody"
                    android:layout_width="356dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="10dp"
                    android:paddingStart="20dp"
                    android:src="@drawable/body"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/editNeck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Neck"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textCursorDrawable="@drawable/text_cursor_cyan"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        app:met_baseColor="@color/textColorPrimary"
                        app:met_floatingLabel="highlight"
                        app:met_maxCharacters="3"
                        app:met_minCharacters="2"
                        app:met_primaryColor="?colorAccent"
                        app:met_textColorHint="@color/hint_foreground_material_light"

                        />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/editBiceps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Biceps"
                        android:inputType="numberDecimal"
                        android:lines="1"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textCursorDrawable="@drawable/text_cursor_cyan"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        app:met_baseColor="@color/textColorPrimary"
                        app:met_floatingLabel="highlight"
                        app:met_maxCharacters="3"
                        app:met_minCharacters="2"
                        app:met_primaryColor="?colorAccent"
                        app:met_textColorHint="@color/hint_foreground_material_light"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/editChest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Chest"
                        android:inputType="numberDecimal"
                        android:lines="1"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textCursorDrawable="@drawable/text_cursor_cyan"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        app:met_baseColor="@color/textColorPrimary"
                        app:met_floatingLabel="highlight"
                        app:met_maxCharacters="3"
                        app:met_minCharacters="2"
                        app:met_primaryColor="?colorAccent"
                        app:met_textColorHint="@color/hint_foreground_material_light"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/editPas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Hip"
                        android:inputType="numberDecimal"
                        android:lines="1"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textCursorDrawable="@drawable/text_cursor_cyan"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        app:met_baseColor="@color/textColorPrimary"
                        app:met_floatingLabel="highlight"
                        app:met_maxCharacters="3"
                        app:met_minCharacters="2"
                        app:met_primaryColor="?colorAccent"
                        app:met_textColorHint="@color/hint_foreground_material_light"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/editUda"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Thigh"
                        android:inputType="numberDecimal"
                        android:lines="1"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textCursorDrawable="@drawable/text_cursor_cyan"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        app:met_baseColor="@color/textColorPrimary"
                        app:met_floatingLabel="highlight"
                        app:met_maxCharacters="3"
                        app:met_minCharacters="2"
                        app:met_primaryColor="?colorAccent"
                        app:met_textColorHint="@color/hint_foreground_material_light"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/editLydki"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Calf"
                        android:inputType="numberDecimal"
                        android:lines="1"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textCursorDrawable="@drawable/text_cursor_cyan"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        app:met_baseColor="@color/textColorPrimary"
                        app:met_floatingLabel="highlight"
                        app:met_maxCharacters="3"
                        app:met_minCharacters="2"
                        app:met_primaryColor="?colorAccent"
                        app:met_textColorHint="@color/hint_foreground_material_light"/>

                    <com.gc.materialdesign.views.ButtonRectangle
                        android:id="@+id/btnSaveBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/textColorPrimary"
                        android:text="@string/save"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.DrawerLayout>